--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ locale                   : "en-US"
 title                    : "Vita Hacks Guide"
 title_separator          : "-"
 name                     : "Plailect, emiyl & T3CHNOLOG1C"
-description              : "Full Homebrew Guide"
+description              : "A complete guide to Vita (TV) custom firmware, from stock to HENkaku Ensō."
 url                      : "https://vita.hacks.guide" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 enforce_ssl              : "vita.hacks.guide"
 baseurl                  : # the subpath of your site, e.g. "/blog"
