more in-progress changes

--- a/_data/navigation/en_US.yml
+++ b/_data/navigation/en_US.yml
@@ -27,6 +27,9 @@ main:
   -
     title: Site Navigation
     url: site-navigation
+  -
+    title: Uninstall CFW
+    url: uninstall-cfw
 bottom:
   -
     title: For support in English, ask for help at <a href="https://discord.gg/JXEKeg6">Vita Hacking on Discord</a>.
@@ -58,9 +61,6 @@ sidebar_pages:
   -
     title: Installing HENkaku
     url: installing-henkaku
-  -
-    title: Installing Homebrew
-    url: installing-homebrew
   -
     title: Multiple Options
     url: multiple-options
