--- a/_data/navigation/en_US.yml
+++ b/_data/navigation/en_US.yml
@@ -13,6 +13,9 @@ main:
     title: Credits
     url: credits
   -
+    title: Updating to 3.65 (Ensō)
+    url: updating-to-3.65-(enso)
+  -
     title: Troubleshooting
     url: troubleshooting
   -
@@ -53,14 +56,20 @@ sidebar_pages:
     title: Get Started
     url: get-started
   -
-    title: Blocking Updates
-    url: blocking-updates
-  -
     title: Updating to 3.60
     url: updating-to-3.60
+  -
+    title: Updating to 3.65
+    url: updating-to-3.65
   -
     title: Installing HENkaku
     url: installing-henkaku
   -
-    title: Multiple Options
-    url: multiple-options
+    title: Installing Ensō (3.65)
+    url: installing-enso-(3.65)
+  -
+    title: Installing h-encore
+    url: installing-h-encore
+  -
+    title: Finalizing Setup
+    url: finalizing-setup
