--- a/_data/navigation/en_US.yml
+++ b/_data/navigation/en_US.yml
@@ -68,5 +68,14 @@ sidebar_pages:
     title: Installing h-encore
     url: installing-h-encore
   -
+    title: Installing h-encore (Linux / Mac)
+    url: installing-h-encore-(linux-mac)
+  -
+    title: Installing h-encore (Windows)
+    url: installing-h-encore-(windows)
+  -
+    title: Configuring h-encore
+    url: configuring-h-encore
+  -
     title: Finalizing Setup
     url: finalizing-setup
