--- a/_data/navigation/en_US.yml
+++ b/_data/navigation/en_US.yml
@@ -22,11 +22,8 @@ main:
     title: Adrenaline
     url: adrenaline
   -
-    title: SD2Vita
-    url: sd2vita
-  -
-    title: USBMC
-    url: usbmc
+    title: StorageMgr
+    url: storagemgr
   -
     title: Site Navigation
     url: site-navigation
