this is such a janky setup but there's no way I'm ever refactoring it

--- a/_data/navigation/en_US.yml
+++ b/_data/navigation/en_US.yml
@@ -71,8 +71,11 @@ sidebar_pages:
     title: Installing h-encore (Linux / Mac)
     url: installing-h-encore-(linux-mac)
   -
-    title: Installing h-encore (Windows)
-    url: installing-h-encore-(windows)
+    title: Installing h-encore (Windows Auto)
+    url: installing-h-encore-(windows-auto)
+  -
+    title: Installing h-encore (Windows Manual)
+    url: installing-h-encore-(windows-manual)
   -
     title: Configuring h-encore
     url: configuring-h-encore
